--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,8 +42,23 @@ jobs:
         if: github.ref == 'refs/heads/master'
         run: monolith _site/index.html -o _site/presentation-standalone.html
 
-      - name: Update gh-pages
+      - name: Build gh-pages archive
         uses: actions/upload-pages-artifact@v4
         if: github.ref == 'refs/heads/master'
         with:
           path: _site/
+
+  deploy:
+    name: Release to GH-pages
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
