--- a/.asciidoctorconfig
+++ b/.asciidoctorconfig
@@ -1,3 +1,4 @@
 :revealjs_theme: league
 :revealjsdir: https://cdn.jsdelivr.net/npm/reveal.js@5.2.1
 :source-highlighter: highlight.js
+:customcss: resources/styles/custom.css
