--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,10 +26,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build code assets
-        run: make all
-        env:
-          STRICT_GENERATION: enabled
-        working-directory: resources/code
+        run: make presentation
 
       - name: Build presentation file
         run: |
