fix(compose): Set mermaid image's workdirs to /tmp
Not setting XDG_ envs causes the chrome instance in kroki images to fail
to run in secure contexts.
Already fixed upstream by https://github.com/yuzutech/kroki/pull/1912,
however up-to-date images have yet to be generated.

--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -19,5 +19,8 @@ services:
   mermaid:
     image: docker.io/yuzutech/kroki-mermaid
     user: "1500:1500"
+    environment:
+    - XDG_CONFIG_HOME=/tmp/config
+    - XDG_CACHE_HOME=/tmp/cache
     expose:
       - "8002"
