feat(compose): Add minified highlightjs to revealjs image

--- a/compose/revealjs/Dockerfile
+++ b/compose/revealjs/Dockerfile
@@ -3,7 +3,10 @@ FROM $BASE_IMAGE
 
 ARG REVEALJS_VERSION=5.2.1
 ARG REVEALJS_SOURCE_ZIP=https://github.com/hakimel/reveal.js/archive/${REVEALJS_VERSION}.zip
-RUN wget $REVEALJS_SOURCE_ZIP -O - | unzip -- -
+ARG HIGHLIGHTJS_VERSION=10.7.3
+ARG HIGHLIGHTJS_SOURCE=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/${HIGHLIGHTJS_VERSION}/highlight.min.js
+RUN wget "$REVEALJS_SOURCE_ZIP" -O - | unzip -- - \
+    && wget "$HIGHLIGHTJS_SOURCE" -O "/reveal.js-${REVEALJS_VERSION}/highlight.min.js"
 
 WORKDIR /reveal.js-${REVEALJS_VERSION}
 CMD python3 -m http.server
